force-app/main/default/objects/OrderItem/fields/B2B_Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>B2B_Customer_Reference__c</fullName>
    <label>B2B Customer Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>