force-app/main/default/objects/OrderItem/fields/B2B_Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Employee_Name__c</fullName>
    <label>B2B Employee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>