force-app/main/default/objects/OrderItem/fields/B2B_ERP_Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>B2B_ERP_Order_Item_Id__c</fullName>
    <externalId>true</externalId>
    <label>B2B ERP Order Item Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>