force-app/main/default/objects/OrderItem/fields/B2B_ERP_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_ERP_Order_Number__c</fullName>
    <label>B2B ERP Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>