force-app/main/default/objects/OrderItem/fields/B2B_ParentOrderItem__c.field-meta.xml
<CustomField>
    <fullName>B2B_ParentOrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VS/RX Frame</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>