force-app/main/default/objects/OrderItem/fields/B2B_Ship_to_ID__c.field-meta.xml
<CustomField>
    <fullName>B2B_Ship_to_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consignee/Receiver of the order</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>