force-app/main/default/objects/OrderItem/fields/B2B_SHIPTO_CPA_ID__c.field-meta.xml
<CustomField>
    <fullName>B2B_SHIPTO_CPA_ID__c</fullName>
    <description>Consignee/Receiver ID</description>
    <externalId>true</externalId>
    <label>Consignee/Receiver ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>