force-app/main/default/objects/OrderItem/fields/B2B_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Type__c</fullName>
    <label>B2B Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vision Sensation</fullName>
            </value>
            <value>
                <fullName>RX Glazing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>